[feat](backend) 添加模版转任务逻辑 更新swagger文档
