# backend/docs/swagger.json
@@ -537,6 +537,45 @@
                     }
                 }
             }
+        },
+        "/templates/{id}/run": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Template"
+                ],
+                "summary": "运行模板",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "模板 ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "覆盖参数",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/api.runTemplateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.TaskDetailResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -785,6 +824,21 @@
                 },
                 "template_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "api.runTemplateRequest": {
+            "type": "object",
+            "properties": {
+                "overrides": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "task_id": {
+                    "type": "string"
+                },
+                "trigger": {
+                    "type": "string"
                 }
             }
         },
